# h_chat

./: .dockerignore  .gitignore  Dockerfile  LICENSE  fine_tuning_data_set.jsonl  pyproject.toml  requirements.txt
h_chat/: app.py
